--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
